--- a/index.html
+++ b/index.html
@@ -1,46 +1,86 @@
-<!doctype html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>hello phaser!</title>
+<!DOCTYPE html>
+<!-- saved from url=(0040)http://getbootstrap.com/examples/navbar/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+            <meta charset="UTF-8" />
+        <title>Hello phaser!</title>
         <script src="//cdn.jsdelivr.net/phaser/2.5.0/phaser.min.js"></script>
-    </head>
-    <body>
-    <h1>Hello World</h1>
-    <a href="phaser/test/part1.html">Click to Play</a>
-    <br>
-    <br>
-
-    <script type="text/javascript">
-
-    window.onload = function() {
-
-        //  Note that this html file is set to pull down Phaser 2.5.0 from the JS Delivr CDN.
-        //  Although it will work fine with this tutorial, it's almost certainly not the most current version.
-        //  Be sure to replace it with an updated version before you start experimenting with adding your own code.
-
-        var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create });
-
-        function preload () {
-
-            game.load.image('sky', 'sky.png');
-            game.load.image('logo', 'phaser.png');
-            game.load.image('star', 'assets/star.png')
 
 
-        }
+    <!-- Bootstrap core CSS -->
+    <link href="./CSS/bootstrap.min.css" rel="stylesheet">
+    <link href="./CSS/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="./CSS/navbar.css" rel="stylesheet">
+    <script src="./CSS/ie-emulation-modes-warning.js"></script>
+  </head>
 
-        function create () {
+  <body>
 
-            var logo = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
-            logo.anchor.setTo(0.5, 0.5);
-            game.add.sprite(0,0,'star')
+    <div class="container">
 
-        }
+      <!-- Static navbar -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="http://getbootstrap.com/examples/navbar/#">Project name</a>
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="http://getbootstrap.com/examples/navbar/#">Home</a></li>
+              <li><a href="http://getbootstrap.com/examples/navbar/#">About</a></li>
+              <li><a href="http://getbootstrap.com/examples/navbar/#">Contact</a></li>
+              <li class="dropdown">
+                <a href="http://getbootstrap.com/examples/navbar/#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="http://getbootstrap.com/examples/navbar/#">Action</a></li>
+                  <li><a href="http://getbootstrap.com/examples/navbar/#">Another action</a></li>
+                  <li><a href="http://getbootstrap.com/examples/navbar/#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-header">Nav header</li>
+                  <li><a href="http://getbootstrap.com/examples/navbar/#">Separated link</a></li>
+                  <li><a href="http://getbootstrap.com/examples/navbar/#">One more separated link</a></li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a href="http://getbootstrap.com/examples/navbar/">Default <span class="sr-only">(current)</span></a></li>
+              <li><a href="http://getbootstrap.com/examples/navbar-static-top/">Static top</a></li>
+              <li><a href="http://getbootstrap.com/examples/navbar-fixed-top/">Fixed top</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
 
-    };
+      <!-- Main component for a primary marketing message or call to action -->
+      <div class="container">
+       <div class="col-xs-12 col-md-8"><iframe src="phaser/test/part9.html" height="600" width="800" frameborder="0" scrolling="no"></iframe>
+</div>
+  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+      </div>
 
-    </script>
+    </div> <!-- /container -->
 
-    </body>
-</html>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="./Navbar Template for Bootstrap_files/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="./Navbar Template for Bootstrap_files/bootstrap.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="./Navbar Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
+  
+
+</body></html>
