--- a/pathing.html
+++ b/pathing.html
@@ -38,7 +38,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="http://getbootstrap.com/examples/navbar/#">Home</a></li>
+              <li class="active"><a href="Index.html">Home</a></li>
               <li><a href="http://getbootstrap.com/examples/navbar/#">About</a></li>
               <li><a href="pathing.html">Waveform</a></li>
               <li class="dropdown">
@@ -65,7 +65,7 @@
 
       <!-- Main component for a primary marketing message or call to action -->
       <div class="container">
-       <div class="col-md-9"><br><iframe src="phaser/test/part9.html" height="600" width="800" frameborder="0" scrolling="no"></iframe>
+       <div class="col-md-9"><br><iframe src="phaser_waveforms/index.html" height="600" width="800" frameborder="0" scrolling="no"></iframe>
 </div>
   <div class="col-md-3"><div class="form-group has-success has-feedback">
   <div class="page-header">
