--- a/pathing.html
+++ b/pathing.html
@@ -38,7 +38,7 @@
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="Index.html">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
               <li><a href="http://getbootstrap.com/examples/navbar/#">About</a></li>
               <li><a href="pathing.html">Waveform</a></li>
               <li class="dropdown">
